--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   ],
   "dependencies": {
     "google-libphonenumber": "^3.2.10",
-    "@islacel/react-native-country-picker-modal": "^2.0.6",
+    "@islacel/react-native-country-picker-modal": "^2.0.6"
   },
   "devDependencies": {
     "metro-react-native-babel-preset": "^0.61.0"
